--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,124 @@
 streamlit>=1.28
-langchain>=0.0.217
-openai>=1.2
-duckduckgo-search
-anthropic>=0.3.0
-trubrics>=1.4.3
 streamlit-feedback
-langchain-community
+accelerate==1.8.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.4.0
+annotated-types==0.7.0
+asttokens==3.0.0
+attrs==25.3.0
+bitsandbytes==0.46.1
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.1
+cycler==0.12.1
+datasets==3.6.0
+debugpy==1.8.11
+decorator==5.1.1
+dill==0.3.8
+docstring-parser==0.17.0
+einops==0.8.1
+executing==2.1.0
+fastjsonschema==2.21.2
+filelock==3.18.0
+fonttools==4.55.3
+frozenlist==1.7.0
+fsspec==2025.3.0
+gitdb==4.0.12
+gitpython==3.1.44
+hf-xet==1.1.5
+huggingface-hub==0.33.2
+idna==3.10
+ipykernel==6.29.5
+ipython==8.31.0
+jedi==0.19.2
+jinja2==3.1.6
+joblib==1.5.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.4.1
+jupyter-client==8.6.3
+jupyter-core==5.7.2
+kiwisolver==1.4.8
+markupsafe==3.0.2
+matplotlib==3.10.0
+matplotlib-inline==0.1.7
+mpmath==1.3.0
+multidict==6.6.3
+multiprocess==0.70.16
+narwhals==2.1.2
+natsort==8.4.0
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.5
+numpy==2.2.1
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+pillow==11.1.0
+platformdirs==4.3.6
+plotly==6.3.0
+prompt-toolkit==3.0.48
+propcache==0.3.2
+protobuf==6.31.1
+psutil==6.1.1
+ptyprocess==0.7.0
+pure-eval==0.2.3
+pyarrow==20.0.0
+pydantic==2.11.7
+pydantic-core==2.33.2
+pygments==2.18.0
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
+pyyaml==6.0.2
+pyzmq==26.2.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.4
+rpds-py==0.27.0
+safetensors==0.5.3
+scikit-learn==1.7.0
+scipy==1.16.0
+seaborn==0.13.2
+sentry-sdk==2.32.0
+setuptools==80.9.0
+simple-parsing==0.1.7
+six==1.17.0
+smmap==5.0.2
+-e .
+stack-data==0.6.3
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.21.2
+torch==2.7.1
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+transformers @ git+https://github.com/huggingface/transformers.git@cdfe49a4d0a364c4bdf2b828b67403994f00b092
+triton==3.3.1
+typing-extensions==4.12.2
+typing-inspection==0.4.1
+tzdata==2024.2
+urllib3==2.5.0
+wandb==0.21.0
+wcwidth==0.2.13
+xxhash==3.5.0
+yarl==1.20.1
