--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-streamlit>=1.28
-streamlit-feedback
 accelerate==1.8.1
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.13
 aiosignal==1.4.0
+altair==5.5.0
 annotated-types==0.7.0
+anyio==4.11.0
 asttokens==3.0.0
 attrs==25.3.0
 bitsandbytes==0.46.1
+blinker==1.9.0
+cachetools==6.2.0
 certifi==2025.6.15
 charset-normalizer==3.4.2
 click==8.2.1
@@ -29,7 +31,10 @@ frozenlist==1.7.0
 fsspec==2025.3.0
 gitdb==4.0.12
 gitpython==3.1.44
+h11==0.16.0
 hf-xet==1.1.5
+httpcore==1.0.9
+httpx==0.28.1
 huggingface-hub==0.33.2
 idna==3.10
 ipykernel==6.29.5
@@ -68,6 +73,7 @@ nvidia-cusparselt-cu12==0.6.3
 nvidia-nccl-cu12==2.26.2
 nvidia-nvjitlink-cu12==12.6.85
 nvidia-nvtx-cu12==12.6.77
+ollama==0.6.0
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
@@ -84,6 +90,7 @@ pure-eval==0.2.3
 pyarrow==20.0.0
 pydantic==2.11.7
 pydantic-core==2.33.2
+pydeck==0.9.1
 pygments==2.18.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
@@ -103,11 +110,16 @@ setuptools==80.9.0
 simple-parsing==0.1.7
 six==1.17.0
 smmap==5.0.2
--e .
+sniffio==1.3.1
 stack-data==0.6.3
+streamlit==1.50.0
+streamlit-feedback==0.1.4
+streamlit-image-select==0.6.0
 sympy==1.14.0
+tenacity==9.1.2
 threadpoolctl==3.6.0
 tokenizers==0.21.2
+toml==0.10.2
 torch==2.7.1
 tornado==6.4.2
 tqdm==4.67.1
@@ -119,6 +131,7 @@ typing-inspection==0.4.1
 tzdata==2024.2
 urllib3==2.5.0
 wandb==0.21.0
+watchdog==6.0.0
 wcwidth==0.2.13
 xxhash==3.5.0
 yarl==1.20.1
